<resources>
    <string name="app_name">Women+Tech</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Crear una cuenta</string>
    <string name="email">example@womenplustech.mx</string>
    <string name="name">Nombre completo</string>
    <string name="birthday">Fecha de nacimiento</string>
    <string name="password">Password</string>
    <string name="con_password">Confirm password</string>
    <string name="register">Registrarse</string>
    <string name="login">Iniciar sesión</string>
    <string name="dont_have_account">¿No tienes una cuenta?, ¡Crea una haciendo click aquí!</string>
    <string name="current_events">Eventos en curso</string>
    <string name="in_progress">En progreso</string>
    <string name="session">Sesion:</string>
    <string name="already_register">Este email ya ha sido registrado, puedes reiniciar la contraseña en la pantall de inicio de sesión</string>
    <string name="user_registered">Te has registrado correctamente</string>
    <string name="user_modified">El usuario se ha intentado modificar, inicie sesión nuevamente</string>
    <string name="guest">Invitada</string>
    <string name="wrong_user_or_password">Usuario o contraseña incorrecto</string>

    <array name="welcome">
        <item>Bienvenida a</item>
        <item>Bienvenido a</item>
        <item>Bienvenide a</item>
        <item>Bienvenidx a</item>
    </array>

    <array name="gender">
        <item>Femenino</item>
        <item>Masculino</item>
        <item>No binarie</item>
        <item>Otro</item>
    </array>
</resources>