<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/create_account"
                    android:textAlignment="center"
                    android:textColor="#9d2a87"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView4"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    app:cardCornerRadius="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.cardview.widget.CardView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            app:cardCornerRadius="200dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.497"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.29">

                            <ImageView
                                android:id="@+id/imageView3"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:elevation="0dp"
                                app:srcCompat="@drawable/woman"
                                tools:srcCompat="@drawable/woman" />

                            <androidx.cardview.widget.CardView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_gravity="bottom|end"
                                android:layout_margin="16dp"
                                android:elevation="2dp"
                                app:cardCornerRadius="15dp"
                                app:cardElevation="8dp"
                                app:cardMaxElevation="8dp">

                                <ImageView
                                    android:id="@+id/imageView13"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:padding="4dp"
                                    app:srcCompat="@drawable/ic_camera" />
                            </androidx.cardview.widget.CardView>

                        </androidx.cardview.widget.CardView>

                        <EditText
                            android:id="@+id/txtName"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="16dp"
                            android:ems="10"
                            android:hint="@string/name"
                            android:inputType="textPersonName"
                            android:minHeight="48dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageView8" />

                        <ImageView
                            android:id="@+id/imageView8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginBottom="24dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:srcCompat="@drawable/ic_account" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    app:cardCornerRadius="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardView4">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/imageView11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="24dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/ic_email" />

                        <EditText
                            android:id="@+id/txtEmail"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="16dp"
                            android:ems="10"
                            android:hint="@string/email"
                            android:inputType="textPersonName"
                            android:minHeight="48dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageView11"
                            app:layout_constraintTop_toTopOf="parent" />

                        <EditText
                            android:id="@+id/txtNacimiento"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="16dp"
                            android:editable="false"
                            android:ems="10"
                            android:hint="@string/birthday"
                            android:inputType="textPersonName"
                            android:minHeight="48dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageView12"
                            app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

                        <ImageView
                            android:id="@+id/imageView12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="24dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/txtEmail"
                            app:srcCompat="@drawable/ic_calendar_black" />

                        <Spinner
                            android:id="@+id/spinner"
                            android:layout_width="0dp"
                            android:layout_height="48dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="16dp"
                            android:dropDownWidth="match_parent"
                            android:entries="@array/gender"
                            android:spinnerMode="dropdown"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageView14"
                            app:layout_constraintTop_toBottomOf="@+id/txtNacimiento" />

                        <ImageView
                            android:id="@+id/imageView14"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="24dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/txtNacimiento"
                            app:srcCompat="@drawable/ic_moon" />

                        <ImageView
                            android:id="@+id/imageView15"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="24dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/spinner"
                            app:srcCompat="@drawable/ic_key" />

                        <ImageView
                            android:id="@+id/imageView16"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="24dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
                            app:srcCompat="@drawable/ic_key" />

                        <EditText
                            android:id="@+id/editTextTextPassword"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="16dp"
                            android:ems="10"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:minHeight="48dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageView15"
                            app:layout_constraintTop_toBottomOf="@+id/spinner" />

                        <EditText
                            android:id="@+id/editTextTextPassword2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="16dp"
                            android:ems="10"
                            android:hint="@string/con_password"
                            android:inputType="textPassword"
                            android:minHeight="48dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toEndOf="@+id/imageView15"
                            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

                        <Button
                            android:id="@+id/btnRegister"
                            android:layout_width="0dp"
                            android:layout_height="55dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/register"
                            app:cornerRadius="15dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
